--- a/Formall.Web.Mvc.Server/Web.Debug.config
+++ b/Formall.Web.Mvc.Server/Web.Debug.config
@@ -15,6 +15,7 @@
     </connectionStrings>
   -->
   <system.web>
+    <customErrors mode="Off" xdt:Transform="Insert"/>
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your Web.config file.
